# marlin

./: CMakeLists.txt  Makefile  make_release.sh
inc/: imageMarlin.hpp
src/: entropyCoder.cc  entropyDecoder.cc  imageBlockEC.cc  imageCoder.cc  imageTransformer.cc  pgmIO.cc  pgmIO.hpp
src/codecs/: rice.cc
src/marlinlib/: marlin.hpp
src/util/: codec.hpp
test/: benchmark.cc  correctness.cc
test/codecs/: charls.cc  charls.hpp  codec.hpp  dedupvector.hpp  fse.cc  fse.hpp  gipfeli.cc  gipfeli.hpp  gzip.cc  gzip.hpp  huf.cc  huf.hpp  lz4.cc  lz4.hpp  lzo.cc  lzo.hpp  marlin.cc  marlin.hpp  marlin2018.cc  marlin2018.hpp  marlinWiP.cc  marlinWiP.hpp  nibble.cc  nibble.hpp  rice.cc  rice.hpp  rle.cc  rle.hpp  snappy.cc  snappy.hpp  zstd.cc  zstd.hpp
utils/: buildPrecalculatedDictionaries.cc  imageMarlin.cc
